Training service added
